--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,42 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
-    <androidx.gridlayout.widget.GridLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3">
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/teal_700"
+        android:textSize="30sp"
+        android:text="Rezultat"
+
+        />
+    </LinearLayout>
+
+    <androidx.gridlayout.widget.GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="335dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="79dp"
+        android:layout_marginLeft="79dp"
+        android:layout_marginTop="267dp"
+        android:layout_marginBottom="2dp">
 
         <Button
             android:id="@+id/digitSix"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="6"
             app:layout_column="2"
             app:layout_row="1" />
@@ -27,6 +52,8 @@
             android:id="@+id/digitThree"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="3"
             app:layout_column="2"
             app:layout_row="2" />
@@ -35,6 +62,8 @@
             android:id="@+id/digitTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="2"
             app:layout_column="1"
             app:layout_row="2" />
@@ -43,6 +72,8 @@
             android:id="@+id/digitFive"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="5"
             app:layout_column="1"
             app:layout_row="1" />
@@ -51,6 +82,8 @@
             android:id="@+id/digitFour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="4"
             app:layout_column="0"
             app:layout_row="1" />
@@ -59,6 +92,8 @@
             android:id="@+id/digitNine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="9"
             app:layout_column="2"
             app:layout_row="0" />
@@ -67,6 +102,8 @@
             android:id="@+id/digitEight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="8"
             app:layout_column="1"
             app:layout_row="0" />
@@ -75,6 +112,8 @@
             android:id="@+id/digitSeven"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="7"
             app:layout_column="0"
             app:layout_row="0" />
@@ -83,9 +122,85 @@
             android:id="@+id/digitOne"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
             android:text="1"
             app:layout_column="0"
             app:layout_row="2" />
+
+        <Button
+            android:id="@+id/digitZero"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="0"
+            app:layout_column="0"
+            app:layout_gravity="top"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/digitDecimal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text=","
+            app:layout_column="1"
+            app:layout_gravity="top"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/actPlus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="+"
+            app:layout_column="0"
+            app:layout_gravity="bottom"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/actMinus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="-"
+            app:layout_column="1"
+            app:layout_gravity="bottom"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/enter"
+            android:layout_width="wrap_content"
+            android:layout_height="190dp"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="="
+            app:layout_column="2"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/actDiv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="/"
+            app:layout_column="0"
+            app:layout_gravity="center"
+            app:layout_row="3" />
+
+        <Button
+            android:id="@+id/actMultiply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="*"
+            app:layout_gravity="center" />
 
     </androidx.gridlayout.widget.GridLayout>
 </RelativeLayout>
