--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_height="0dp">
 
 
 
@@ -27,16 +26,16 @@
 
     <androidx.gridlayout.widget.GridLayout
         android:layout_width="wrap_content"
-        android:layout_height="335dp"
+        android:layout_height="389dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="79dp"
-        android:layout_marginLeft="79dp"
-        android:layout_marginTop="267dp"
-        android:layout_marginBottom="2dp">
+        android:layout_marginStart="77dp"
+        android:layout_marginLeft="77dp"
+        android:layout_marginTop="214dp"
+        android:layout_marginBottom="0dp">
 
         <Button
             android:id="@+id/digitSix"
@@ -46,6 +45,7 @@
             android:insetRight="4dp"
             android:text="6"
             app:layout_column="2"
+            app:layout_gravity="center"
             app:layout_row="1" />
 
         <Button
@@ -56,6 +56,7 @@
             android:insetRight="4dp"
             android:text="3"
             app:layout_column="2"
+            app:layout_gravity="center"
             app:layout_row="2" />
 
         <Button
@@ -66,6 +67,7 @@
             android:insetRight="4dp"
             android:text="2"
             app:layout_column="1"
+            app:layout_gravity="center"
             app:layout_row="2" />
 
         <Button
@@ -76,6 +78,7 @@
             android:insetRight="4dp"
             android:text="5"
             app:layout_column="1"
+            app:layout_gravity="center"
             app:layout_row="1" />
 
         <Button
@@ -86,6 +89,7 @@
             android:insetRight="4dp"
             android:text="4"
             app:layout_column="0"
+            app:layout_gravity="center"
             app:layout_row="1" />
 
         <Button
@@ -96,6 +100,7 @@
             android:insetRight="4dp"
             android:text="9"
             app:layout_column="2"
+            app:layout_gravity="center"
             app:layout_row="0" />
 
         <Button
@@ -106,6 +111,7 @@
             android:insetRight="4dp"
             android:text="8"
             app:layout_column="1"
+            app:layout_gravity="center"
             app:layout_row="0" />
 
         <Button
@@ -116,6 +122,7 @@
             android:insetRight="4dp"
             android:text="7"
             app:layout_column="0"
+            app:layout_gravity="center"
             app:layout_row="0" />
 
         <Button
@@ -126,6 +133,7 @@
             android:insetRight="4dp"
             android:text="1"
             app:layout_column="0"
+            app:layout_gravity="center"
             app:layout_row="2" />
 
         <Button
@@ -136,7 +144,7 @@
             android:insetRight="4dp"
             android:text="0"
             app:layout_column="0"
-            app:layout_gravity="top"
+            app:layout_gravity="center|top"
             app:layout_row="3" />
 
         <Button
@@ -147,7 +155,7 @@
             android:insetRight="4dp"
             android:text=","
             app:layout_column="1"
-            app:layout_gravity="top"
+            app:layout_gravity="center|top"
             app:layout_row="3" />
 
         <Button
@@ -158,7 +166,7 @@
             android:insetRight="4dp"
             android:text="+"
             app:layout_column="0"
-            app:layout_gravity="bottom"
+            app:layout_gravity="bottom|center"
             app:layout_row="3" />
 
         <Button
@@ -169,7 +177,7 @@
             android:insetRight="4dp"
             android:text="-"
             app:layout_column="1"
-            app:layout_gravity="bottom"
+            app:layout_gravity="bottom|center"
             app:layout_row="3" />
 
         <Button
@@ -180,6 +188,7 @@
             android:insetRight="4dp"
             android:text="="
             app:layout_column="2"
+            app:layout_gravity="center"
             app:layout_row="3" />
 
         <Button
@@ -200,6 +209,41 @@
             android:insetLeft="4dp"
             android:insetRight="4dp"
             android:text="*"
+            app:layout_column="1"
+            app:layout_gravity="center" />
+
+        <Button
+            android:id="@+id/actBracket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="Button"
+            app:layout_column="0"
+            app:layout_gravity="center"
+            app:layout_row="5"
+            tools:text="( )" />
+
+        <Button
+            android:id="@+id/actClear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="C"
+            app:layout_column="1" />
+
+        <Button
+            android:id="@+id/actInvert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:insetLeft="4dp"
+            android:insetRight="4dp"
+            android:text="+ / -"
+            app:layout_column="2"
             app:layout_gravity="center" />
 
     </androidx.gridlayout.widget.GridLayout>
