--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,11 @@
 
         <TextView
             android:textColor="@color/black"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_width="wrap_content"
-            android:layout_gravity="end"
+            android:layout_gravity="start"
             android:layout_weight="1"
-            android:textAlignment="textEnd"
+            android:textAlignment="textStart"
             android:text="Calculator Input"
             android:textSize="30sp"
             android:id="@+id/inputTextView"
@@ -31,7 +31,7 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
+        android:layout_gravity="start"
         android:text="Calculator Results"
         android:textSize="30sp"
         android:id="@+id/resultsTextView"
@@ -43,11 +43,6 @@
     <androidx.gridlayout.widget.GridLayout
         android:layout_width="wrap_content"
         android:layout_height="496dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="false"
-        android:layout_alignParentBottom="false"
-        android:layout_centerHorizontal="false"
         android:layout_marginStart="77dp"
         android:layout_marginLeft="77dp"
         android:layout_marginTop="25dp"
